# StudyAndroid

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zarddy/studyandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zarddy/studyandroid/: MainActivity.java
app/src/main/java/com/zarddy/studyandroid/activity/: MainActivity.java
app/src/main/java/com/zarddy/studyandroid/matrix/activity/: MatrixActivity.java  TestGridMatrixActivity.java  TestMeshActivity.java
app/src/main/java/com/zarddy/studyandroid/matrix/view/: ImageViewLight.java  MatrixImageView.java  MatrixImageView2.java  MeshView.java  ScaleImageView.java  SingleTouchView.java
app/src/main/java/com/zarddy/studyandroid/opencv/: OpenCVHelper.java
app/src/main/java/com/zarddy/studyandroid/opencv/entity/: PointMargin.java
app/src/main/res/layout/: activity_matrix.xml  activity_test_grid_matrix.xml  activity_test_mesh.xml
app/src/main/res/values/: attrs.xml
app/src/test/java/com/zarddy/studyandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary343/src/main/: AndroidManifest.xml
